tests/NormalTests/paczka1/small_fuzzy/39693322.err
Error in line 4: 6Fd A248 87,4
Error in line 8: A351 A351 43,8
